<resources>
    <string name="app_name">ChistanGame</string>

    <string name="txt_about_us">درباره ما</string>
    <string name="txt_share_app">اشتراک گذاری</string>
    <string name="txt_description_about_us">به بازی چیستان خوش آمدید!\nهدف ما سرگرم کردن و به چالش کشیدن ذهن شما با چیستان‌های جذاب و متنوع است.\nاز شما دعوت می‌کنیم تا نظرات و پیشنهادات خود را با ما به اشتراک بگذارید و در این مسیر با ما همراه باشید.\nمنتظر دریافت بازخوردهای ارزشمند شما هستیم!</string>
    <string name="txt_contact_support">ارتباط با پشتیبانی</string>
    <string name="txt_exit">خروج</string>
    <string name="txt_description_exit">خسته شدم ، بعدا دوباره میام</string>
    <string name="txt_register_a_comment">ثبت نظر</string>
    <string name="txt_setting">تنظیمات</string>
    <string name="txt_music">موسیقی</string>
    <string name="txt_volume">صدای دکمه</string>
    <string name="txt_cansel">انصراف</string>
    <string name="txt_ok">تایید</string>
    <string name="txt_increase_ruby">افزایش یاقوت</string>
    <string name="txt_ruby_is_not_enough">متاسفانه یاقوت کافی نداری.</string>
    <string name="txt_restart">شروع دوباره</string>
    <string name="txt_description_restart">تمام مراحل پاک شده و بازی از ابتدا شروع می شود.</string>
    <string name="txt_description_delete_database_1">تمامی اطلاعات و یاقوت های شما از بین می رود و بازی به حالت اولیه بر می گردد.</string>
    <string name="txt_description_delete_database_2">آیا مطمئن هستید؟</string>
    <string name="txt_felicitation">تبریک</string>
    <string name="txt_description_felicitation">تبریک شما به مرحله بعد راه یافتید</string>
    <string name="txt_description_has_been_won">شما قبلا این مرحله را با موفقیت گذرانده اید .</string>
    <string name="txt_wrong_answer">جواب اشتباه است.</string>
    <string name="txt_get_more_rubies_by_viewing_ad">با مشاهده تبلیغ 2 برابر یاقوت دریافت کنید.</string>
    <string name="txt_viewing_ad">دیدن تبلیغ</string>
    <string name="txt_again">دوباره</string>
    <string name="txt_ad">تبلیغات</string>
    <string name="txt_next_level">مرحله بعد</string>
    <string name="txt_shop">فروشگاه</string>
    <string name="txt_start">شروع</string>
    <string name="txt_finish">پایان</string>
    <string name="txt_help">راهنما</string>
    <string name="txt_levels">مراحل</string>
    <string name="txt_return">بازگشت</string>
    <string name="txt_attention">توجه</string>
    <string name="problem_in_game">مشکل در بازی چیستان</string>
    <string name="address_email">saraaasaber77@gmail.com</string>
    <string name="wrong_answer">جواب اشتباه می باشد :(</string>
    <string name="please_waiting">لطفا منتظر بمانید...</string>
    <string name="text_final_win">تبریک، شما با موفقیت تمامی مراحل رو به پایان رساندید.منتظر مراحل جدید باشید.</string>
    <string name="not_ad">متاسفانه تبلیغاتی موجود نیس!</string>
    <string name="w_see_end_Ad">لطفا تبلیغات را تا آخر ببنید</string>
    <string name="w_no_access_to_internet">لطفا اینترنت خود را روشن کنید.</string>
    <string name="w_lock_level">مرحله مورد نظر قفل می باشد</string>
    <string name="w_not_enough_coin_for_continue_game">برای ادامه بازی باید 8یاقوت داشته باشید</string>
    <string name="w_lock_of_ruby">8یاقوت از شما کم شد.</string>

</resources>