<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_15sdp"
    android:background="@color/transparent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/simple_shape_background_dialog"
        android:orientation="vertical"
        android:padding="@dimen/_25sdp">

        <TextView
            style="@style/text_tittle_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_about_us" />

        <TextView
            style="@style/text_body_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_margin_top"
            android:justificationMode="inter_word"
            android:text="@string/txt_description_about_us" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/size_margin_top"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_email"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/simple_shape_background_icons"
                android:src="@drawable/vector_email"
                app:cornerRadius="@dimen/_5sdp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                style="@style/text_orange_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_contact_support" />

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_gravity="start|top"
        android:background="@drawable/vector_close" />


</RelativeLayout>


