<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_15sdp"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/simple_shape_background_dialog"
            android:orientation="vertical"
            android:padding="@dimen/_25sdp">

            <TextView
                style="@style/text_orange_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_exit"
                android:textSize="@dimen/_20sdp" />

            <TextView
                style="@style/text_orange_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_margin_top"
                android:justificationMode="inter_word"
                android:text="@string/txt_description_exit"
                android:textSize="@dimen/_18sdp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/size_margin_top"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    style="@style/text_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/background_btn_red"
                    android:text="@string/txt_exit"
                    app:backgroundTint="@null" />

                <com.google.android.material.button.MaterialButton
                    style="@style/text_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/background_btn_green"
                    android:text="@string/txt_register_a_comment"
                    app:backgroundTint="@null" />

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_gravity="start|top"
            android:background="@drawable/vector_close" />


    </RelativeLayout>


</RelativeLayout>